# static-server

./: Cargo.toml  Dockerfile  README.md  main.rs
,github/workflows/: ci.yml
