[package]
name = "static-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "static-server"
path = "main.rs"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
mime_guess = "2.0.5"
tokio = { version = "1.49.0", features = ["full"] }
